로그인/로그아웃 UI 구현

--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -92,27 +92,27 @@
                             </div>
                         </li>
                         <!-- 비로그인 렌더링-->
-                        <li class="nav-item dropdown p-2" sec:authorize="isAnonymous()">
-                            <a class="nav-link text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                <span class="d-none d-md-inline-block">로그인</span>
+                        <li class="p-2" sec:authorize="isAnonymous()">
+                            <a class="nav-link text-nowrap px-3" th:href="@{/user/login}" role="button">
+                                <span class="d-none d-md-inline-block">Login</span>
                             </a>
                         </li>
                         <!-- 로그인 렌더링-->
                         <li class="nav-item dropdown p-2" sec:authorize="isAuthenticated()">
                             <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                <i class="material-icons account_circle">&#xe853;</i>
+<!--                                <i class="material-icons account_circle">&#xe853;</i>-->
                                 <span class="d-none d-md-inline-block">아이디</span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-small">
-                                <a class="dropdown-item" href="user-profile-lite.html">
-                                    <i class="material-icons">&#xE7FD;</i> Profile</a>
-                                <a class="dropdown-item" href="components-blog-posts.html">
-                                    <i class="material-icons">vertical_split</i> Blog Posts</a>
-                                <a class="dropdown-item" href="add-new-post.html">
-                                    <i class="material-icons">note_add</i> Add New Post</a>
+                                <a class="dropdown-item" th:href="@{/user/my_page}">
+                                    <i class="material-icons">&#xE7FD;</i>Profile</a>
+<!--                                <a class="dropdown-item" href="components-blog-posts.html">-->
+<!--                                    <i class="material-icons">vertical_split</i> Blog Posts</a>-->
+<!--                                <a class="dropdown-item" href="add-new-post.html">-->
+<!--                                    <i class="material-icons">note_add</i> Add New Post</a>-->
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item text-danger" href="#">
-                                    <i class="material-icons text-danger">&#xE879;</i> Logout </a>
+                                <a class="dropdown-item text-danger" th:href="@{/user/logout}">
+                                    <i class="material-icons text-danger">&#xE879;</i>Logout</a>
                             </div>
                         </li>
                     </ul>
