--- a/src/main/resources/templates/user/mail.html
+++ b/src/main/resources/templates/user/mail.html
@@ -1,7 +1,4 @@
-<html
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        xmlns:th="http://thymeleaf.org"
-        layout:decorate="~{layout}">
+<html layout:decorate="~{layout/layout}">
 <div layout:fragment="content" class="container my-3">
 <h1>메일 발송</h1>
 
