--- a/src/main/resources/templates/user/find_pw_form.html
+++ b/src/main/resources/templates/user/find_pw_form.html
@@ -1,7 +1,4 @@
-<html
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        xmlns:th="http://thymeleaf.org"
-        layout:decorate="~{layout}">
+<html layout:decorate="~{layout/layout}">
 
 <div layout:fragment="content" class="container my-3">
     <div class="my-3 border-bottom">
