기본 베이스 지도 구현

--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -1,5 +1,6 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content" class="mt-3 container justify-content-around" style="width: 95%; min-height: 100%; position:relative;">
+    <input type="hidden" name="course" th:value="${course}">
     <!--제목과 수정, 삭제 버튼-->
     <div class="justify-content-between d-flex mb-2" style="height: 10%;">
         <h1 th:text="${plan.title}"></h1>
@@ -32,60 +33,70 @@
             </div>
         </div>
         <!--지도-->
-        <div class="card card container mx-1" style="width:65%; height:100%;">
-            <!--지도-->
-            <div id="map" style="width:100%;height:350px;"></div>
+        <div id="map" style="width:80%;height:450px;"></div>
 
-            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167"></script>
-            <script>
-                var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-                    mapOption = {
-                        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-                        level: 3 // 지도의 확대 레벨
-                    };
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167
+&libraries=services"></script>
+        <script>
+            var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                mapOption = {
+                    center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                    level: 10 // 지도의 확대 레벨
+                };
 
-                var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+            // 지도를 생성합니다
+            var map = new kakao.maps.Map(mapContainer, mapOption);
 
-                // 마커를 표시할 위치와 title 객체 배열입니다
-                var positions = [
-                    {
-                        title: '카카오',
-                        latlng: new kakao.maps.LatLng(33.450705, 126.570677)
-                    },
-                    {
-                        title: '생태연못',
-                        latlng: new kakao.maps.LatLng(33.450936, 126.569477)
-                    },
-                    {
-                        title: '텃밭',
-                        latlng: new kakao.maps.LatLng(33.450879, 126.569940)
-                    },
-                    {
-                        title: '근린공원',
-                        latlng: new kakao.maps.LatLng(33.451393, 126.570738)
-                    }
-                ];
 
-                // 마커 이미지의 이미지 주소입니다
-                var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+            // 주소-좌표 변환 객체를 생성합니다
+            var geocoder = new kakao.maps.services.Geocoder();
 
-                for (var i = 0; i < positions.length; i++) {
-
-                    // 마커 이미지의 이미지 크기 입니다
-                    var imageSize = new kakao.maps.Size(24, 35);
-
-                    // 마커 이미지를 생성합니다
-                    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
-
-                    // 마커를 생성합니다
-                    var marker = new kakao.maps.Marker({
-                        map: map, // 마커를 표시할 지도
-                        position: positions[i].latlng, // 마커를 표시할 위치
-                        title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
-                        image: markerImage // 마커 이미지
-                    });
+            var positions = [
+                {
+                    title: '카카오',
+                    address: '경기 성남시 분당구 판교역로 166 카카오 판교아지트 A동 3층'
+                },
+                {
+                    title: '생태연못',
+                    address: '경기 남양주시 조안면 능내리 50'
+                },
+                {
+                    title: '텃밭',
+                    address: '경기 남양주시 별내동 2235'
+                },
+                {
+                    title: '근린공원',
+                    address: '경기 남양주시 별내면 청학로68번길 40'
                 }
-            </script>
+            ];
+
+            for (var i = 0; i < positions.length; i++) {
+                // 주소로 좌표를 검색합니다
+                geocoder.addressSearch(positions[i].address, function (result, status) {
+
+                    // 정상적으로 검색이 완료됐으면
+                    if (status === kakao.maps.services.Status.OK) {
+
+                        var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+                        // 결과값으로 받은 위치를 마커로 표시합니다
+                        var marker = new kakao.maps.Marker({
+                            map: map,
+                            position: coords
+                        });
+
+                        // 인포윈도우로 장소에 대한 설명을 표시합니다
+                        var infowindow = new kakao.maps.InfoWindow({
+                            content: '<div style="width:150px;text-align:center;padding:6px 0;">title</div>'
+                        });
+                        infowindow.open(map, marker);
+
+                        // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+                        map.setCenter(coords);
+                    }
+                });
+            }
+        </script>
             <!--지도 끝-->
         </div>
     </div>
