--- a/src/main/resources/templates/user/login_form.html
+++ b/src/main/resources/templates/user/login_form.html
@@ -1,32 +1,205 @@
-<html layout:decorate="~{layout/layout}">
-
-<div layout:fragment="content" class="container my-3">
-    <form th:action="@{/user/login}" method="post">
-
-        <div th:if="${param.error}">
-            <div class="alert alert-danger">
-                사용자ID 또는 비밀번호를 확인해 주세요.
+<!DOCTYPE html>
+<html>
+<head>
+    <title>You Login Template</title>
+    <!-- Site favicon -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <!-- Icon Font -->
+    <link rel="stylesheet" th:href="@{/fonts/ionicons/css/ionicons.css}">
+    <!-- Text Font -->
+    <link rel="stylesheet" th:href="@{/fonts/font.css}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <!-- Normal style CSS -->
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <!-- Normal media CSS -->
+    <link rel="stylesheet" th:href="@{/css/media.css}">
+</head>
+<body>
+<main class="cd-main">
+    <section class="cd-section index5 visible">
+        <div class="cd-content style5">
+            <div class="login-box">
+                <div class="row no-gutters height-100-percentage">
+                    <!-- login style5 left side start -->
+                    <div class="col-md-4 col-sm-12 style5-left">
+                        <div class="d-flex height-100-percentage padding-30px">
+                            <div class="align-self-center width-100-percentage">
+                                <h2>여행을 DAMDA</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <a class="btn btn-primary btn-lg" href="#" role="button">더 알아보기</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- login style5 left side end -->
+                    <!-- login style5 right side start -->
+                    <div class="col-md-8 col-sm-12 style5-right">
+                        <div class="login-form-slider">
+                            <!-- login slide start -->
+                            <div class="login-slide slide">
+                                <div class="sign-up-txt">
+                                    계정이 없으신가요? <a href="javascript:;" class="sign-up-click">회원가입하기</a>
+                                </div>
+                                <div class="d-flex height-100-percentage max-width-400 margin-0-auto padding-10px">
+                                    <div class="align-self-center width-100-percentage">
+                                        <h2>로그인</h2>
+                                        <form class="floating-form" th:action="@{/user/login}" method="post">
+                                            <div class="form-group">
+                                                <input type="text" name="username" class="form-control">
+                                                <label class="label">Enter Your ID</label>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="password" name="password" class="form-control">
+                                                <label class="label">Password</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input type="checkbox" class="form-check-input" id="remember-me"
+                                                       name="remember-me" checked>
+                                                <label class="form-check-label" for="remember-me"
+                                                       aria-describedby="rememberMeHelp">로그인 유지</label>
+                                            </div>
+                                            <div class="row">
+                                                    <div class="col-4">
+                                                        <div class="forgot-txt">
+                                                            <a href="javascript:;" class="forgot-id-click">아이디찾기</a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-4">
+                                                        <div class="forgot-txt">
+                                                            <a href="javascript:;" class="forgot-password-click">비밀번호찾기</a>
+                                                        </div>
+                                                    </div>
+                                                <div class="col-4 row-6">
+                                                    <div class="form-group text-right">
+                                                        <input type="submit" class="submit" value="Login">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- login slide end -->
+                            <!-- signup slide start -->
+                            <div class="signup-slide slide">
+                                <div class="sign-up-txt">
+                                    if you have an account? <a href="javascript:;" class="login-click">login</a>
+                                </div>
+                                <div class="d-flex height-100-percentage padding-40px">
+                                    <div class="align-self-center width-100-percentage">
+                                        <h2>Create An Account</h2>
+                                        <form class="floating-form">
+                                            <div class="row">
+                                                <div class="col-md-6 col-sm-12">
+                                                    <div class="form-group">
+                                                        <label class="label">아이디</label>
+                                                        <input type="text" class="form-control">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 col-sm-12">
+                                                    <div class="form-group">
+                                                        <label class="label">닉네임</label>
+                                                        <input type="text" class="form-control">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 col-sm-12">
+                                                    <div class="form-group">
+                                                        <label class="label">비밀번호</label>
+                                                        <input type="password" class="form-control">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 col-sm-12">
+                                                    <div class="form-group">
+                                                        <label class="label">비밀번호 확인</label>
+                                                        <input type="password" class="form-control">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 col-sm-12">
+                                                    <div class="form-group">
+                                                        <label class="label">이메일</label>
+                                                        <input type="text" class="form-control">
+                                                    </div>
+                                                </div>
+                                                <!--                                                <div class="col-md-6 col-sm-12">-->
+                                                <!--                                                    <div class="form-group">-->
+                                                <!--                                                        <label class="label">이메일 확인</label>-->
+                                                <!--                                                        <input type="text" class="form-control">-->
+                                                <!--                                                    </div>-->
+                                                <!--                                                </div>-->
+                                            </div>
+                                            <div class="form-group text-right">
+                                                <input type="submit" class="submit" value="Register">
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- signup slide end -->
+                            <!-- forgot id slide start -->
+                            <div class="forgot-id-slide slide">
+                                <div class="d-flex height-100-percentage style4-left">
+                                    <div class="align-self-center width-100-percentage max-width-400 margin-0-auto padding-10px">
+                                        <form class="floating-form">
+                                            <label class="label">아이디찾기</label>
+                                            <div class="form-group user-name-field">
+                                                <input type="text" class="form-control">
+                                                <label class="label">Email</label>
+                                            </div>
+                                            <div class="form-group text-right">
+                                                <input type="submit" class="submit" value="Submit">
+                                            </div>
+                                        </form>
+                                        <div class="sign-up-txt">
+                                            if you remember your id? <a href="javascript:;" class="login-click">login</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- forgot id slide end -->
+                            <!-- forgot password slide start -->
+                            <div class="forgot-password-slide slide">
+                                <div class="d-flex height-100-percentage style4-left">
+                                    <div class="align-self-center width-100-percentage max-width-400 margin-0-auto padding-10px">
+                                        <form class="floating-form">
+                                            <label class="label">비밀번호를 초기화하기 위해 아이디와 이메일을 입력해주세요</label>
+                                            <div class="form-group user-name-field">
+                                                <input type="text" class="form-control">
+                                                <label class="label">Email</label>
+                                            </div>
+                                            <div class="form-group text-right">
+                                                <input type="submit" class="submit" value="Submit">
+                                            </div>
+                                        </form>
+                                        <div class="sign-up-txt">
+                                            if you remember your password? <a href="javascript:;" class="login-click">login</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- forgot password slide end -->
+                        </div>
+                    </div>
+                    <!-- login style5 right side end -->
+                </div>
             </div>
         </div>
+    </section>
+</main>
 
-        <div class="mb-3">
-            <label class="form-label">아이디</label>
-            <input type="text" name="username" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label">비밀번호</label>
-            <input type="password" name="password" class="form-control">
-        </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="remember-me" name="remember-me" checked>
-            <label class="form-check-label" for="remember-me" aria-describedby="rememberMeHelp">로그인 유지</label>
-        </div>
-        <button type="submit" class="btn btn-primary">로그인</button>
-        <button type="button" class="btn btn-primary" th:onclick="|location.href='@{/user/signup}'|">회원가입</button>
-        <button type="button" class="btn btn-primary" th:onclick="|location.href='@{/user/find_id}'|">아이디 찾기</button>
-        <button type="button" class="btn btn-primary" th:onclick="|location.href='@{/user/find_pw}'|">비밀번호 찾기</button>
-    </form>
-</div>
+<div id="cd-loading-bar" data-scale="1" class="index"></div>
+<!-- JS File -->
+<script th:src="@{/js/modernizr.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+<script th:src="@{/js/velocity.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/script.js}"></script>
+</body>
 </html>
-
