[front] 리뷰 show 페이지 프론트 구현

--- a/src/main/resources/templates/review/createReview.html
+++ b/src/main/resources/templates/review/createReview.html
@@ -23,7 +23,7 @@
                                 <label class="form-label">여행지 태그 선택</label>
                                 <div class="custom-control custom-toggle custom-toggle-sm mb-1">
                                     <input type="checkbox" id="alone" name="checkedValue" class="custom-control-input"
-                                           value="인스타">
+                                           value="혼자">
                                     <label class="custom-control-label" for="alone">혼자</label>
                                 </div>
                                 <div class="custom-control custom-toggle custom-toggle-sm mb-1">
