--- a/src/main/resources/templates/review/createReview.html
+++ b/src/main/resources/templates/review/createReview.html
@@ -23,18 +23,49 @@
                             <!-- th:each는 allErrors를 반복문을 돈다.-->
                         </div>
 
-
+                        <!-- 검색 태그 조건 -->
+                        <div class="form-row mx-5">
+                            <fieldset class="col">
+                                <strong class="text-muted d-block mb-2">검색 태그 조건</strong>
+                                <div class="custom-control custom-toggle custom-toggle-sm mb-1">
+                                    <input type="checkbox" id="insta" name="checkedValue" th:field="*{reviewTags}" class="custom-control-input" value="인스타">
+                                    <label class="custom-control-label" for="insta">인스타</label>
+                                </div>
+                                <div class="custom-control custom-toggle custom-toggle-sm mb-1">
+                                    <input type="checkbox" id="withCouple" name="checkedValue" class="custom-control-input" value="연인끼리">
+                                    <label class="custom-control-label" for="withCouple">연인끼리</label>
+                                </div>
+                                <div class="custom-control custom-toggle custom-toggle-sm mb-1">
+                                    <input type="checkbox" id="withFamily" name="checkedValue" class="custom-control-input" value="가족끼리">
+                                    <label class="custom-control-label" for="withFamily">가족끼리</label>
+                                </div>
+                            </fieldset>
+                            <fieldset class="col">
+                                <br>
+                                <div class="custom-control custom-toggle custom-toggle-sm mb-1">
+                                    <input type="checkbox" id="withFriend" name="checkedValue" class="custom-control-input" value="친구끼리">
+                                    <label class="custom-control-label" for="withFriend">친구끼리</label>
+                                </div>
+                                <div class="custom-control custom-toggle custom-toggle-sm mb-1">
+                                    <input type="checkbox" id="activity" name="checkedValue" class="custom-control-input" value="액티비티">
+                                    <label class="custom-control-label" for="activity">액티비티</label>
+                                </div>
+                                <div class="custom-control custom-toggle custom-toggle-sm mb-1">
+                                    <input type="checkbox" id="watching" name="checkedValue" class="custom-control-input" value="볼거리">
+                                    <label class="custom-control-label" for="watching">볼거리</label>
+                                </div>
+                            </fieldset>
+                        </div>
 
                         <hr>
 
                         <label class="form-label">제목</label>
-                        <input class="form-control form-control-lg mb-3 " type="text" placeholder="제목을 입력해주세요.">
+                        <input class="form-control form-control-lg mb-3 " type="text" th:field="*{title}" placeholder="제목을 입력해주세요.">
 
 
                         <div class="mb-3">
                             <label class="form-label">내용</label>
-                            <textarea name="content" class="form-control" rows="30"
-                                      placeholder="내용을 입력해주세요."></textarea>
+                            <textarea name="content" class="form-control" rows="30" th:field="*{content}" placeholder="내용을 입력해주세요."></textarea>
                         </div>
 
                         <button type="submit" class="btn btn-outline-primary">저장</button>
