--- a/src/main/resources/templates/review/createReview.html
+++ b/src/main/resources/templates/review/createReview.html
@@ -17,7 +17,7 @@
                         <hr>
                         <!--th:object를 사용하면서 ${reviewForm.xx}를 쓸 때 *{xx}로 사용할 수 있다.
                                     그리고 아래에서 코드의 fields가 reviewForm의 fields이다.-->
-                        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+                        <div class="alert alert-primary" role="alert" th:if="${#fields.hasAnyErrors()}">
                             <!-- fileds의 errors가 review에 관련된 에러다. -->
                             <div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
                             <!-- th:each는 allErrors를 반복문을 돈다.-->
