--- a/src/main/resources/templates/user/login_form.html
+++ b/src/main/resources/templates/user/login_form.html
@@ -34,7 +34,6 @@
                                 <h2>여행을 DAMDA</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                     tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <a class="btn btn-primary btn-lg" href="#" role="button">더 알아보기</a>
                             </div>
                         </div>
                     </div>
@@ -45,7 +44,7 @@
                             <!-- login slide start -->
                             <div class="login-slide slide">
                                 <div class="sign-up-txt">
-                                    계정이 없으신가요? <a href="javascript:;" class="sign-up-click" th:onclick="|location.href='@{/user/signup}'|">회원가입하기</a>
+                                    계정이 없으신가요? <a class="sign-up-click" th:onclick="|location.href='@{/user/signup}'|">회원가입하기</a>
                                 </div>
                                 <div class="d-flex height-100-percentage max-width-400 margin-0-auto padding-10px">
                                     <div class="align-self-center width-100-percentage">
@@ -92,55 +91,6 @@
                                 </div>
                             </div>
                             <!-- login slide end -->
-                            <!-- signup slide start -->
-                            <div class="signup-slide slide">
-                                <div class="sign-up-txt">
-                                    if you have an account? <a href="javascript:;" class="login-click">login</a>
-                                </div>
-                                <div class="d-flex height-100-percentage padding-40px">
-                                    <div class="align-self-center width-100-percentage">
-                                        <h2>Create An Account</h2>
-                                        <form class="floating-form" th:object="${userCreateForm}" method="post">
-                                            <div class="row">
-                                                <div class="col-md-6 col-sm-12">
-                                                    <div class="form-group">
-                                                        <label class="label">아이디</label>
-                                                        <input type="text" th:field="*{username}" class="form-control">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6 col-sm-12">
-                                                    <div class="form-group">
-                                                        <label class="label">닉네임</label>
-                                                        <input type="text" th:field="*{nickname}" class="form-control">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6 col-sm-12">
-                                                    <div class="form-group">
-                                                        <label class="label">비밀번호</label>
-                                                        <input type="password" th:field="*{password}" class="form-control">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6 col-sm-12">
-                                                    <div class="form-group">
-                                                        <label class="label">비밀번호 확인</label>
-                                                        <input type="password" th:field="*{password_check}" class="form-control">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6 col-sm-12">
-                                                    <div class="form-group">
-                                                        <label class="label">이메일</label>
-                                                        <input type="email" th:field="*{email}" class="form-control">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="form-group text-right">
-                                                <input type="submit" class="submit" value="Register">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- signup slide end -->
                             <!-- forgot id slide start -->
                             <div class="forgot-id-slide slide">
                                 <div class="d-flex height-100-percentage style4-left">
