--- a/src/main/resources/templates/user/find_pw_form.html
+++ b/src/main/resources/templates/user/find_pw_form.html
@@ -1,25 +1,91 @@
-<html layout:decorate="~{layout/layout}">
+<!DOCTYPE html>
+<html>
+<head>
+    <title>You Login Template</title>
+    <!-- Site favicon -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <!-- Icon Font -->
+    <link rel="stylesheet" th:href="@{/fonts/ionicons/css/ionicons.css}">
+    <!-- Text Font -->
+    <link rel="stylesheet" th:href="@{/fonts/font.css}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <!-- Normal style CSS -->
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <!-- Normal media CSS -->
+    <link rel="stylesheet" th:href="@{/css/media.css}">
+</head>
 
-<div layout:fragment="content" class="container my-3">
-    <div class="my-3 border-bottom">
-        <div>
-            <h4>비밀번호 찾기</h4>
+<body>
+<main class="cd-main">
+    <section class="cd-section index5 visible">
+        <div class="cd-content style5">
+            <div class="login-box">
+                <div class="row no-gutters height-100-percentage">
+                    <!-- login style5 left side start -->
+                    <div class="col-md-4 col-sm-12 style5-left">
+                        <div class="d-flex height-100-percentage padding-30px">
+                            <div class="align-self-center width-100-percentage">
+                                <h2>여행을 DAMDA</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- login style5 left side end -->
+                    <!-- login style5 right side start -->
+                    <div class="col-md-8 col-sm-12 style5-right">
+
+                        <!-- forgot password slide start -->
+                        <div class="forgot-password-slide slide">
+                            <div class="d-flex height-100-percentage style4-left">
+                                <div class="align-self-center width-100-percentage max-width-400 margin-0-auto padding-10px">
+                                    <form class="floating-form" th:action="@{/user/find_pw}" th:object="${findPwForm}"
+                                          method="post">
+                                        <div th:replace="user/form_errors :: formErrorsFragment"></div>
+                                        <h2>비밀번호찾기</h2>
+                                        <div class="form-group user-name-field">
+                                            <input type="text" th:field="*{username}" class="form-control">
+                                            <label class="label">아이디</label>
+                                        </div>
+                                        <div class="form-group user-name-field">
+                                            <input type="text" th:field="*{email}" class="form-control">
+                                            <label class="label">이메일</label>
+                                        </div>
+                                        <div class="form-group text-right">
+                                            <input type="submit" class="submit" value="Submit">
+                                        </div>
+                                    </form>
+                                    <div class="sign-up-txt">
+                                        비밀번호가 기억 나셨나요? <a th:onclick="|location.href='@{/user/login}'|"
+                                                                          class="login-click">로그인하기</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- forgot password slide end -->
+
+                    </div>
+                    <!-- login style5 right side end -->
+                </div>
+            </div>
         </div>
-    </div>
-    <form th:action="@{/user/find_pw}" th:object="${findPwForm}" method="post">
+    </section>
+</main>
 
-        <div th:replace="user/form_errors :: formErrorsFragment"></div>
-
-        <div class="mb-3">
-            <label class="form-label">아이디</label>
-            <input type="text" th:field="*{username}" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label">이메일</label>
-            <input type="email" th:field="*{email}" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary">비밀번호 찾기</button>
-    </form>
-</div>
+<div id="cd-loading-bar" data-scale="1" class="index"></div>
+<!-- JS File -->
+<script th:src="@{/js/modernizr.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+<script th:src="@{/js/velocity.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/script.js}"></script>
+</body>
 </html>
