--- a/src/main/resources/templates/user/login_form.html
+++ b/src/main/resources/templates/user/login_form.html
@@ -57,11 +57,11 @@
                                             </div>
                                             <div class="form-group">
                                                 <input type="text" name="username" class="form-control">
-                                                <label class="label">Enter Your ID</label>
+                                                <label class="label">아이디</label>
                                             </div>
                                             <div class="form-group">
                                                 <input type="password" name="password" class="form-control">
-                                                <label class="label">Password</label>
+                                                <label class="label">비밀번호</label>
                                             </div>
                                             <div class="form-check">
                                                 <input type="checkbox" class="form-check-input" id="remember-me"
